InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/vlocity_ins__MarketingEvent__c.object-meta.xml
<CustomObject>
    <description>Represents an organized event typically for promoting or educating people about a company&apos;s products or services. For example, health insurers may hold events to promote their insurance offerings or to enroll members in plans. Financial services organizations may hold educational events focused on retirement planning or successful investing.</description>
    <label>Marketing Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>