InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__AttendanceActual__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttendanceActual__c</fullName>
    <label>Actual Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>