InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__AttendanceCapacity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttendanceCapacity__c</fullName>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>