InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__EventEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EventEndDate__c</fullName>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>