InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__EventEndTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EventEndTime__c</fullName>
    <label>Event End Time</label>
    <type>Time</type>
</CustomField>