InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__EventManagerId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EventManagerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagedMarketingEvents</relationshipName>
    <type>Lookup</type>
</CustomField>