InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__EventWebsite__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EventWebsite__c</fullName>
    <label>Event Website</label>
    <type>Url</type>
</CustomField>