InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__IsSearchable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsSearchable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this event is searchable.</description>
    <label>Searchable</label>
    <type>Checkbox</type>
</CustomField>