InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__LineOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LineOfBusiness__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Dental</fullName>
            </value>
            <value>
                <fullName>Group Medical</fullName>
            </value>
            <value>
                <fullName>Group Vision</fullName>
            </value>
            <value>
                <fullName>Individual Dental</fullName>
            </value>
            <value>
                <fullName>Individual Medical</fullName>
            </value>
            <value>
                <fullName>Individual Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>