InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__PercentOfCapacity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PercentOfCapacity__c</fullName>
    <formula>vlocity_ins__CountOfRegistered__c /  vlocity_ins__AttendanceCapacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of Capacity</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>