InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEvent__c/fields/vlocity_ins__PrimaryContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Events</relationshipLabel>
    <relationshipName>MarketingEvents</relationshipName>
    <type>Lookup</type>
</CustomField>